book/tests/snapshots/snapshot__@language-features__ranges-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from orders\nsort [-value, date]\ntake 101..110\n"
input_file: book/tests/prql/language-features/ranges-1.prql
---
SELECT
  *
FROM
  orders
ORDER BY
  value DESC,
  date
LIMIT
  10 OFFSET 100

