book/tests/snapshots/snapshot__@language-features__s-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect db_version = s\"version()\"\n"
input_file: book/tests/prql/language-features/s-strings-0.prql
---
SELECT
  version() AS db_version
FROM
  my_table

