book/tests/snapshots/snapshot__@language-features__s-strings-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\naggregate [average salary]\n"
input_file: book/tests/prql/language-features/s-strings-1.prql
---
SELECT
  AVG(salary)
FROM
  employees

