book/tests/snapshots/snapshot__@language-features__s-strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from de=dept_emp\njoin s=salaries side:left [\n  (s.emp_no == de.emp_no),\n  s\"\"\"({s.from_date}, {s.to_date})\n  OVERLAPS\n  ({de.from_date}, {de.to_date})\"\"\"\n]\n"
input_file: book/tests/prql/language-features/s-strings-2.prql
---
SELECT
  de.*,
  s.*
FROM
  dept_emp AS de
  LEFT JOIN salaries AS s ON s.emp_no = de.emp_no
  AND (s.from_date, s.to_date) OVERLAPS (de.from_date, de.to_date)

