book/tests/snapshots/snapshot__@language-features__s-strings-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom employees\nderive [\n  has_valid_title = s\"regexp_contains(title, '([a-z0-9]*-){{2,}}')\"\n]\n"
input_file: book/tests/prql/language-features/s-strings-4.prql
---
SELECT
  *,
  regexp_contains(title, '([a-z0-9]*-){2,}') AS has_valid_title
FROM
  employees

