book/tests/snapshots/snapshot__@language-features__s-strings-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [\n  gross_salary = salary + benefits,\n  daily_rate = s\"({gross_salary}) / 365\"\n]\n"
input_file: book/tests/prql/language-features/s-strings-6.prql
---
SELECT
  *,
  salary + benefits AS gross_salary,
  (salary + benefits) / 365 AS daily_rate
FROM
  employees

