book/tests/snapshots/snapshot__@language-features__strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect x = '\"hello world\"'\n"
input_file: book/tests/prql/language-features/strings-2.prql
---
SELECT
  '"hello world"' AS x
FROM
  my_table

